# pychemkin

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  pyproject.toml  tox.ini
.github/: dependabot.yaml  labeler.yml  labels.yml
.github/workflows/: ci.yml  container_test.yaml
ansys/chemkin/: ChemkinKeywordTips.yaml  __init__.py  chemistry.py  chemkin_wrapper.py  color.py  inlet.py  mixture.py  reactormodel.py  steadystatesolver.py
ansys/chemkin/batchreactor/: __init__.py  batchreactor.py
ansys/chemkin/batchreactors/: batchreactor.py
ansys/chemkin/engines/: HCCI.py  SI.py  engine.py
ansys/chemkin/flowreactors/: PFR.py
doc/: .vale.ini  make.bat
doc/source/: Get_Start.rst  Introduction.rst  License.rst  Prerequisites.rst  Tutorials.rst  changelog.rst  conf.py  contributing.rst  examples.rst  getting-started.rst  getting_started.rst  index.rst  links.rst  user-guide.rst  user_guide.rst
doc/source/tutorials/: tutorial_adiabaticflametemperature.ipynb  tutorial_createmixture.ipynb  tutorial_detonationwave.ipynb  tutorial_ignitiondelaytime.ipynb  tutorial_loadmechanism.ipynb  tutorial_mixmixtures.ipynb  tutorial_mixtureproperties.ipynb  tutorial_multiplemechanisms.ipynb  tutorial_rapidcompressionmachine.ipynb  tutorial_reactionrates.ipynb  tutorial_speciesproperties.ipynb
examples/: CONV.py  GALLERY_HEADER.rst  PSRChain_declustered.py  PSRChain_network.py  PSRgas.py  PSRnetwork.py  adiabaticflametemperature.py  closed_homogeneous__transient.py  createmixture.py  detonation.py  equilibriumcomposition.py  flamespeed.py  hcciengine.py  heatingvalues.py  ignitiondelay.py  jetstirredreactor.py  loadmechanism.py  mixturemixing.py  multi-inletPSR.py  multiplemechanisms.py  multizone.py  plugflow.py  premixedburnerflame.py  rcm.py  reactionrates.py  sensitivity.py  simple.py  sparkignitioengine.py  speciesproperties.py  vapor.py
examples/PFR/: plugflow.py
examples/PSR/: PSRgas.py  jetstirredreactor.py  multi-inletPSR.py
examples/batch/: closed_homogeneous__transient.py  ignitiondelay.py  rcm.py  sensitivity.py  vapor.py
examples/chemistry/: loadmechanism.py  multiplemechanisms.py  simple.py  speciesproperties.py
examples/engine/: hcciengine.py  multizone.py  sparkignitioengine.py
examples/mixture/: adiabaticflametemperature.py  createmixture.py  detonation.py  equilibriumcomposition.py  heatingvalues.py  mixturemixing.py  reactionrates.py
examples/premixed_flame/: flamespeed.py  methane_flamespeed_table.py  premixedburnerflame.py
examples/reactor_network/: PSRChain_declustered.py  PSRChain_network.py  PSRnetwork.py
src/ansys/chemkin/: chemistry.py  flame.py  grid.py  hybridreactornetwork.py  mixture.py  reactormodel.py  realgaseos.py  utilities.py
tests/: __init__.py  conftest.py  instructions.txt  pytest.ini  runtests.py  test_loadmechanism.ipynb  test_pychemkin_comparisons.py  test_pychemkin_env.py  test_pychemkin_groups.py  tools.py
tests/baseline/: PSRChain_declustered.baseline  PSRChain_network.baseline  PSRnetwork.baseline  sensitivity.baseline
tests/benchmarks/test_CONP/: Summary.out  all0D_54.out  chem.out  test_CONP.out  tran.out
tests/benchmarks/test_adiabaticflametemperature/: Summary.out  chem.out  test_adiabaticflametemperature.out
tests/benchmarks/test_createmixture/: Summary.out  chem.out  test_createmixture.out  tran.out
tests/benchmarks/test_detonation/: Summary.out  chem.out  test_detonation.out
tests/benchmarks/test_equilibriumcomposition/: Summary.out  chem.out  test_equilibriumcomposition.out
tests/benchmarks/test_loadmechanism/: Summary.out  Summary_1.out  chem.out  chem_1.out  test_loadmechanism.out  tran.out  tran_1.out
tests/benchmarks/test_mixturemixing/: Summary.out  chem.out  test_mixturemixing.out
tests/benchmarks/test_reactionrates/: Summary.out  chem.out  test_reactionrates.out  tran.out
tests/benchmarks/test_speciesproperties/: Summary.out  chem.out  test_speciesproperties.out  tran.out
tests/integration_tests/: CONV.py  PSRChain_declustered.py  PSRChain_network.py  PSRgas.py  PSRnetwork.py  adiabaticflametemperature.py  closed_homogeneous__transient.py  createmixture.py  detonation.py  equilibriumcomposition.py  hcciengine.py  heatingvalues.py  ignitiondelay.py  jetstirredreactor.py  loadmechanism.py  mixturemixing.py  multi-inletPSR.py  multiplemechanisms.py  multizone.py  plugflow.py  reactionrates.py  sensitivity.py  simple.py  sparkignitioengine.py  speciesproperties.py  vapor.py
tests/solutions/test_CONV/: Summary.out  all0D_54.out  chem.out  test_CONV.out  tran.out
tests/solutions/test_adiabaticflametemperature/: Summary.out  chem.out  test_adiabaticflametemperature.out
tests/solutions/test_createmixture/: Summary.out  chem.out  test_createmixture.out  tran.asc  tran.out
tests/solutions/test_detonation/: Summary.out  chem.asc  chem.out  test_detonation.out
tests/solutions/test_equilibriumcomposition/: Summary.out  chem.out  test_equilibriumcomposition.out
tests/solutions/test_ignitiondelay/: Summary.out  chem.asc  chem.out  test_ignitiondelay.out
tests/solutions/test_loadmechanism/: Summary.out  Summary_1.out  chem.out  chem_1.out  test_loadmechanism.out  tran.out  tran_1.out
tests/solutions/test_mixturemixing/: Summary.out  chem.out  test_mixturemixing.out
tests/solutions/test_reactionrates/: Summary.out  chem.out  test_reactionrates.out  tran.out
tests/test_cases/: test_CONV.py  test_HCCIengine.py  test_adiabaticflametemperature.py  test_createmixture.py  test_detonation.py  test_equilibriumcomposition.py  test_heatingvalues.py  test_ignitiondelay.py  test_loadmechanism.py  test_mixturemixing.py  test_multiplemechanisms.py  test_reactionrates.py  test_speciesproperties.py  test_water.py
tutorials/: tutorial_adiabaticflametemperature.ipynb  tutorial_createmixture.ipynb  tutorial_detonationwave.ipynb  tutorial_ignitiondelaytime.ipynb  tutorial_loadmechanism.ipynb  tutorial_mixmixtures.ipynb  tutorial_mixtureproperties.ipynb  tutorial_rapidcompressionmachine.ipynb  tutorial_reactionrates.ipynb  tutorial_speciesproperties.ipynb
(+38 files in other folders)
