[tool.poetry]
name = "ansys-chemkin"
version = "0.25.dev10"
description = "PyChemkin provides Pythonic interface to Ansys chemkin utilities and reactor models"
license = "MIT"
authors = ["ANSYS, Inc. <ansys.support@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.maintainers@ansys.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Natural Language :: English",
]
packages = [
	{include = "chemkin", from = "ansys"},
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3.2",
    "pytest-cov>=4.1.0",
    "dill>=0.3.5.1",
    "pytest-mock==3.10.0",
    "urllib3==2.2.2",
    "requests>=2.28.2",
    "docker>=6.1.0",
    "usd-core>=24.8",
    "pygltflib>=1.16.2",
    "matplotlib>=3.6.0",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
numpy= ">=1.14.0"
pyyaml = ">=6.0"
matplotlib = ">=3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
matplotlib = ">=3.6.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
Sphinx = ">=4.2.0"
numpydoc = "1.5.0"
ansys-sphinx-theme = ">=1.0.3"
matplotlib = ">=3.6.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = "88"

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = "88"
src_paths = ["ansys", "tests"]

[tool.codespell]
ignore-words-list = "delt, pres, te"
quiet-level = 3
skip = "*.toml,*.pyc,*.xml,*.gif,*.png,*.jpg,*.js,*.html,*.svg,*.asc,*.out"
